# sna-mcube

./: .gitignore  .gitmodules  LICENSE  README.md  SOXR-LICENSE.txt  THIRD_PARTY_LICENSES.md  musikcube-plugins.sln
docs/: 00-Instructions.md  01-VST_&_Timing.md
plugins/wasapiexclusiveout/: wasapiexclusiveout.vcxproj  wasapiexclusiveout.vcxproj.filters
plugins/wasapiexclusiveout/src/: VstHost.cpp  VstHost.h  WasapiExclusiveOut.cpp  WasapiExclusiveOut.h  wasapiexclusiveout_plugin.cpp
tools/: test_wasapi.cpp  test_wasapi.vcxproj  vst_toml_manager.py  wasapi_em_tester.cpp  wasapi_em_tester.vcxproj
tools/vst_toml_manager/: pyproject.toml  vst_toml_manager.py
tools/wasapi_em_tester/: wasapi_em_tester.vcxproj
