[project]
name = "vst-toml-manager"
version = "0.1.0"
description = "A Textual UI to manage VST presets and configuration for musikcube plugins"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
    "tomlkit>=0.12.0",
]

[project.scripts]
vst-toml-manager = "vst_toml_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
